# aml

./: .gitignore  README.md  conda.yaml  pyproject.toml  requirements.txt  template.env
aml/: settings.py
notebooks/: AML - Basics - Create Compute.ipynb  AML - Getting started.ipynb  AML - Train Torch Model.ipynb  AML - Train, Tune - pytorch.ipynb
src/: hymenoptera.py
src/train-tune-pytorch/: pytorch_train.py
